# Taskmaster

./: .clang-format  Cargo.toml  config.yaml  configmael.yaml  exemple_confd.txt  history.txt  logfile.txt  ls1.txt  notes.md  notes.txt  ping1.txt  ping1_stdout_log.txt  rustfmt.toml  sources.MD
src/: communication.rs  errors.rs  exec.rs  logger.rs  main.rs  mod.rs  read_history.rs
src/config/: parser.rs  structs.rs
src/taskmasterctl/: mod.rs  read_history.rs
src/threads/: exec_entry.rs  main_entry.rs  mod.rs
testprogs/: todo.md
testprogs/cwd/: cwd  main.c
testprogs/env/: env  main.c
testprogs/return_code/: main.c
testprogs/stderr/: main.c  stderr
testprogs/umask/: main.c  umask
